migrates project to Java 11